# HS_HA_Server

./: CMakeLists.txt  README.md  main.cpp
ConSQL/: CMakeLists.txt  mysql_conn.cpp  mysql_conn.h
HTTP/: CMakeLists.txt  http_conn.cpp  http_conn.h
Log/: CMakeLists.txt  Log.cpp  Log.h  block_queue.h
ThreadPool/: threadpool.h
Timer/: CMakeLists.txt  Timer.cpp  Timer.h  Timer_list.cpp  Timer_list.h
root/: log.html  logError.html  register.html  registerError.html
